<resources>

    <!--Application/MainActivity-->
    <string name="app_name">GifSound It</string>
    <string name="intent_filter_label">View GifSound</string>
    <string name="send_to">Send Gifsound to…</string>
    <string name="action_about">About</string>
    <string name="about_libraries_description">A mobile version of the website gifsound.com! Posts are fetched from /r/GifSound. By Konstantinos Lountzis.</string>

    <!--Home Fragment -->
    <string name="home_error_generic">Error fetching data…</string>
    <string name="home_error_posts">Error fetching posts…</string>
    <string name="home_error_token">Error refreshing token…</string>
    <string name="home_error_token_refresh">Refreshing token…</string>
    <string name="home_button_hot">Hot</string>
    <string name="home_button_new">New</string>
    <string name="home_button_top">Top</string>
    <string name="home_item_button_link">Button to open reddit post</string>
    <string name="home_item_thumbnail">Post thumbnail</string>
    <string name="home_top_hour">Hour</string>
    <string name="home_top_day">Day</string>
    <string name="home_top_week">Week</string>
    <string name="home_top_month">Month</string>
    <string name="home_top_year">Year</string>
    <string name="home_top_all">All</string>
    <string name="home_selector_title">Select time period</string>
    <string name="home_selector_all_chosen">Showing top posts of all time.</string>
    <string name="home_selector_other_chosen">Showing top posts of this %1$s.</string>
    <string name="home_info_token_ready">Authenticated with reddit! You can get data now!</string>
    <string name="content_description_home_more">Button to expand filter banner</string>

    <!--Open GifSound Fragment -->
    <string name="opengs_gif_title">Gif</string>
    <string name="opengs_sound_error_label">Sound problems? Tap here to play GIF anyway</string>
    <string name="opengs_sound_title">Sound</string>
    <string name="opengs_label_offset">Offset (s): %1$d</string>
    <string name="content_description_opengs_close_gif_label">Button to close the play gif label</string>
    <string name="content_description_opengs_refresh">Button to refresh gifsound playback</string>
    <string name="content_description_opengs_back">Button to go leave GifSound screen</string>
    <string name="content_description_opengs_share">Button to share gifsound</string>
    <string name="content_description_opengs_revert">Revert seconds to default</string>
    <string name="content_description_opengs_decrease">Button to decrease second offset</string>
    <string name="content_description_opengs_add">Button to add seconds offset</string>
    <string name="content_description_opengs_gif">Gif screen</string>
    <string name="opengs_all_ready">Ready</string>
    <string name="opengs_one_ready">ready</string>
    <string name="opengs_one_error">error</string>
    <string name="opengs_one_loading">loading…</string>
    <string name="opengs_one_invalid">invalid</string>
    <string name="opengs_error_gif_malformed">Bitstream is not conforming to the related coding standard or file spec.</string>
    <string name="opengs_error_gif_io_error">IO Error</string>
    <string name="opengs_error_gif_unsupported">Not supported by Media framework</string>
    <string name="opengs_error_gif_timed_out">Operation timed out</string>
    <string name="opengs_error_gif_unknown">Unknown Error (Code: %1$s)</string>

</resources>
