<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"
            android:id="@+id/toolbar_top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_down"
                    android:soundEffectsEnabled="false"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:id="@+id/moreButton"
                    android:contentDescription="@string/content_description_home_more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/moreButton"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:id="@+id/toolbarTitle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/toolbarTitle"
                    android:layout_toEndOf="@id/moreButton"
                    android:id="@+id/filterMenu" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_button_hot"
                        android:layout_marginEnd="15dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorOrange"
                        android:id="@+id/hotButton"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_button_new"
                        android:layout_marginEnd="15dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGrayDark"
                        android:id="@+id/newButton" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_button_top"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGrayDark"
                        android:id="@+id/topButton"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mSwipe">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="60dp"
            android:paddingBottom="20dp"
            android:clipToPadding="false"
            android:id="@+id/mainRecycler"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>